# triage

./: .gitignore  dirtyduck.py  manifest.scm  pyproject.toml
dirtyduck/food_db/: 00_create_extensions.sql  01_create_inspections_table.sql  02_create_cleaned_inspections_table.sql  04_create_semantic_tables.sql
docs/sources/experiments/: architecture.md  cohort-labels.md  running.md
example/north_carolina/: .gitattributes  .gitignore  README.md  create_matrices.ipynb  create_recidivism_set.ipynb  create_separated_ables.sql  load_nc_db.py  ncdoc_des2csv.sh  ncdoc_serial.sh
example/north_carolina/generate_tables/: create_recidivism_set_datetime.ipynb  create_recidivism_set_unprocessed.ipynb  create_separated_tables.sql  create_tables.sql
example/north_carolina/triage_configs/: nc_recid.yaml  nc_recid_sep_tables.yaml  run_triage.py
requirement/: dev.txt  main.txt  test.txt
requirement/include/: test-management.txt
src/sql/: layout.sql  setup.sql
src/tests/: test_database_reflection.py  test_experiments.py  test_rankers.py
src/tests/architect_tests/: test_builders.py  test_cohort_generators.py  test_integration.py  utils.py
src/tests/catwalk_tests/: test_predictors.py
src/tests/postmodeling_tests/: test_without_predictions.py
src/triage/: cli.py  database_reflection.py  rankers.py
src/triage/component/architect/: builders.py  cohort_generators.py  cohort_table_generators.py  feature_dictionary_creator.py  feature_generators.py  feature_group_creator.py  feature_group_mixer.py  label_generators.py  planner.py
src/triage/component/audition/: selection_rules.py
src/triage/component/catwalk/: __init__.py  evaluation.py  model_grouping.py  model_trainers.py  predictors.py  storage.py  subsetters.py  utils.py
src/triage/experiments/: base.py  defaults.py
src/triage/predictlist/: __init__.py  utils.py
src/triage/util/: conf.py
triage/: model_trainers.py
(+8 files in other folders)
