[tool.poetry]
name = "triage"
version = "5.2.0"
description = "Risk modeling and prediction"
authors = ["Center for Data Science and Public Policy <datascifellows@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://dssg.github.io/triage"
repository = "https://github.com/dssg/triage"
documentation = "https://dssg.github.io/triage/dirtyduck"
classifiers=[
        "Development Status :: 2 - Pre-Alpha",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.8.0"
SQLAlchemy = "^1.4.39"
PyYAML = "^6.0"
psycopg2-binary = "^2.9.3"
python-dateutil = "^2.8.2"
boto3 = "^1.24.22"
click = "^8.1.3"
inflection = "^0.5.1"
numpy = "^1.23.0"
sqlalchemy-postgres-copy = "^0.5.0"
retrying = "^1.3.3"
Dickens = "^1.0.1"
signalled-timeout = "^1.0.0"
wrapt = "^1.14.1"
argcmdr = "^0.12.0"
sqlparse = "^0.4.2"
Pebble = "^4.6.3"
adjustText = "^0.7.3"
graphviz = "^0.20"
requests = "^2.28.1"
coloredlogs = "^15.0.1"
verboselogs = "^1.7"
s3fs = "^0.4.2"
matplotlib = "^3.5.2"
pandas = "^1.4.3"
seaborn = "^0.11.2"
ohio = "^0.5.0"
aequitas = "^0.42.0"
scipy = "^1.6.1"
scikit-learn = "^1.1.1"
"testing.postgresql" = "^1.3.0"

[tool.poetry.dev-dependencies]
mkdocs = "^1.3.0"
pymdown-extensions = "^9.5"
mkdocs-material = "^8.3.9"
mkdocstrings = "^0.19.0"
factory-boy = "^3.2.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
moto = "^3.1.16"
hypothesis = "^6.49.1"
csvkit = "^1.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
